@@ -7,9 +7,9 @@ environment:
   Production:
     # production specific settings...
 
-# communication services
-services:
-- class: XmppService
+# transport services
+transport_services:
+- class: XmppTransportService
   host: openid.almende.org
   port: 5222
   service: openid.almende.org
